--- a/profiles/databricks.yaml
+++ b/profiles/databricks.yaml
@@ -3,6 +3,11 @@
 # experiment:
   # name: "/Shared/sklearn_regression_experiment"
 
+# Set the registry server URI. This property is especially useful if you have a registry
+# server that’s different from the tracking server.
+# model_registry:
+#   uri: "databricks://my_prod_scope:central_model_registry"
+
 # Use a section of the TLC Trip Record Dataset for model development
 # (https://www1.nyc.gov/site/tlc/about/tlc-trip-record-data.page)
 INGEST_DATA_LOCATION: dbfs:/databricks-datasets/nyctaxi-with-zipcodes/subsampled
@@ -10,5 +15,3 @@ INGEST_DATA_LOCATION: dbfs:/databricks-datasets/nyctaxi-with-zipcodes/subsampled
 INGEST_DATA_FORMAT: spark_sql
 # Override the default train / validation / test dataset split ratios
 SPLIT_RATIOS: [0.75, 0.125, 0.125]
-# Specify the registry_uri if required
-# REGISTRY_URI: sqlite:////tmp/registry.db
