--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: pull request comment
 on:
-  pull_request_review_comment:                                     
+  issue_comment:                                     
     types: [created, edited, deleted]
 
 jobs:
